// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render empty page, if no item was passed 1`] = `
<div
  className="container text-center"
>
  Opps! Nothing!
</div>
`;

exports[`render right tree structure when passed items 1`] = `
<div
  className="w-full h-full relative overflow-hidden"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="w-full h-full relative overflow-hidden"
  >
    <div
      className="w-full h-full carousel-card hidden active"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-0
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-1
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-2
      </div>
    </div>
  </div>
</div>
`;

exports[`render right tree structure when passed items 2`] = `
<div
  className="w-full h-full relative overflow-hidden"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="w-full h-full relative overflow-hidden"
  >
    <div
      className="w-full h-full carousel-card hidden active"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-0
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-1
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-2
      </div>
    </div>
  </div>
  <div
    className="indicators flex flex-row items-center absolute p-1"
  >
    <div
      className="m-1 w-12 h-2 bg-gray-400"
    >
      <div
        className="h-full indicator-inner bg-red-300 w-full"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
    <div
      className="m-1 w-12 h-2 bg-gray-400"
    >
      <div
        className="h-full indicator-inner w-0"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
    <div
      className="m-1 w-12 h-2 bg-gray-400"
    >
      <div
        className="h-full indicator-inner w-0"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`render right tree structure when passed items 3`] = `
<div
  className="w-full h-full relative overflow-hidden"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="w-full h-full relative overflow-hidden"
  >
    <div
      className="w-full h-full carousel-card hidden active"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-0
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-1
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-2
      </div>
    </div>
  </div>
  <a
    className="control-prev absolute w-1/5 h-full"
    data-testid="prev"
    onClick={[Function]}
    role="link"
  >
    <span />
  </a>
  <a
    className="control-next absolute w-1/5 h-full"
    data-testid="next"
    onClick={[Function]}
    role="link"
  >
    <span />
  </a>
</div>
`;

exports[`render right tree structure when passed items 4`] = `
<div
  className="w-full h-full relative overflow-hidden"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="w-full h-full relative overflow-hidden"
  >
    <div
      className="w-full h-full carousel-card hidden active"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-0
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-1
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-2
      </div>
    </div>
  </div>
  <div
    className="indicators flex flex-row items-center absolute p-1"
  >
    <div
      className="m-1 w-12 h-2 bg-gray-400"
    >
      <div
        className="h-full indicator-inner bg-red-300 w-full"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
    <div
      className="m-1 w-12 h-2 bg-gray-400"
    >
      <div
        className="h-full indicator-inner w-0"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
    <div
      className="m-1 w-12 h-2 bg-gray-400"
    >
      <div
        className="h-full indicator-inner w-0"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
  </div>
  <a
    className="control-prev absolute w-1/5 h-full"
    data-testid="prev"
    onClick={[Function]}
    role="link"
  >
    <span />
  </a>
  <a
    className="control-next absolute w-1/5 h-full"
    data-testid="next"
    onClick={[Function]}
    role="link"
  >
    <span />
  </a>
</div>
`;
